--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "survey-react-ui": "^1.9.58",
     "tailwind-merge": "^1.8.0"
   },
   "devDependencies": {
