--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
     "html2canvas": "^1.4.1",
     "next": "^13.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "redis": "^4.5.0",
     "survey-react-ui": "^1.9.58",
-    "tailwind-merge": "^1.8.0"
+    "tailwind-merge": "^1.8.0",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
