--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-share": "^4.4.1",
     "redis": "^4.5.0",
     "spotify-web-api-node": "^5.0.2",
     "survey-react-ui": "^1.9.58",
