--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,12 @@
 # DEVELOPMENT TOOLS
 # Ideally, don't add them to production deployment envs
 # !STARTERCONF Change to true if you want to log data
-NEXT_PUBLIC_SHOW_LOGGER="false"
+NEXT_PUBLIC_SHOW_LOGGER="true"
+REDIS_URL=
+
+SPOTIFY_REFRESH_TOKEN=
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+
+SENDGRID_API_KEY=
+FROM_EMAIL=
