--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
+    "aws-sdk": "^2.1259.0",
     "axios": "^1.1.3",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
